# mhm2_bench

./: CMakeLists.txt  README.md
cmake/: FindUPCXX-UTILS.cmake
kernels/: CMakeLists.txt
kernels/kmer_analysis/: CMakeLists.txt
kernels/kmer_analysis/input/: Athal_mito.fas.txt
kernels/kmer_analysis/scripts/: run.sh
kernels/kmer_analysis/src/: CMakeLists.txt  contigging.cpp  contigging.hpp  devices_cpu.cpp  devices_gpu.cpp  devices_gpu.hpp  hash_funcs.cpp  hash_funcs.hpp  kmer.cpp  kmer.hpp  main.cpp  version.h
kernels/kmer_analysis/src/gpu-utils/: CMakeLists.txt  gpu_common.cpp  gpu_common.hpp  gpu_compatibility.hpp  gpu_utils.cpp  gpu_utils.hpp
kernels/kmer_analysis/src/kcount/: CMakeLists.txt  kcount.cpp  kcount.hpp  kcount_cpu.cpp  kcount_gpu.cpp  kmer_dht.cpp  kmer_dht.hpp
kernels/kmer_analysis/src/kcount/kcount-gpu/: CMakeLists.txt  gpu_hash_funcs.hpp  gpu_hash_table.cpp  gpu_hash_table.hpp  parse_and_pack.cpp  parse_and_pack.hpp  tcf_hash_wrapper.hpp  tcf_wrapper.hpp
kernels/kmer_analysis/utils/upcxx-utils/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  ChangeLog.md  LEGAL.txt  LICENSE.txt  README.md
kernels/kmer_analysis/utils/upcxx-utils/cmake/: UPCXX_UTILSConfig.cmake
kernels/kmer_analysis/utils/upcxx-utils/contrib/: ci-perlmutter.accuracy.sh  ci-perlmutter.build.sh  ci-perlmutter.validate.sh  ci-ubuntu.build.sh  ci-ubuntu.validate.sh  install_upcxx.sh
kernels/kmer_analysis/utils/upcxx-utils/include/: upcxx_utils.hpp  version.h
kernels/kmer_analysis/utils/upcxx-utils/include/upcxx_utils/: Allocators.hpp  bin_hash.hpp  binary_search.hpp  colors.h  fixed_size_cache.hpp  flat_aggr_store.hpp  gasnetvars.hpp  gather.hpp  heavy_hitter_streaming_store.hpp  limit_outstanding.hpp  log.h  log.hpp  mem_profile.hpp  min_sum_max.hpp  ofstream.hpp  progress_bar.hpp  promise_collectives.hpp  reduce_prefix.hpp  shared_array.hpp  shared_global_ptr.hpp  split_rank.hpp  thread_pool.hpp  three_tier_aggr_store.hpp  timers.hpp  two_tier_aggr_store.hpp  version.h
kernels/kmer_analysis/utils/upcxx-utils/include/upcxx_utils/memory-allocators/: Allocator.h  PoolAllocator.h  StackLinkedList.h  StackLinkedListImpl.h  UPCXXAllocator.h  Utils.h  upcxx_defs.h
kernels/kmer_analysis/utils/upcxx-utils/src/: CMakeLists.txt  binary_search.cpp  flat_aggr_store.cpp  gasnetvars.cpp  limit_outstanding.cpp  log.cpp  mem_profile.cpp  ofstream.cpp  progress_bar.cpp  promise_collectives.cpp  reduce_prefix-extern-template.in.cpp  reduce_prefix.cpp  shared_array.cpp  split_rank.cpp  thread_pool.cpp  three_tier_aggr_store.cpp  timers-extern-template.in.cpp  timers.cpp  two_tier_aggr_store.cpp
kernels/kmer_analysis/utils/upcxx-utils/src/memory-allocators/: Allocator.cpp  CMakeLists.txt  PoolAllocator.cpp  UPCXXAllocator.cpp  Utils.cpp
kernels/kmer_analysis/utils/upcxx-utils/test/: CMakeLists.txt  hello_world-mpi.cpp  hello_world.cpp  main_shell.cpp  spawn_tests.sh  test_allocators.cpp  test_binary_search.cpp  test_combined.cpp  test_fixed_size_cache.cpp  test_flat_aggr_store.cpp  test_gasnetvars.cpp  test_gather.cpp  test_limit_outstanding.cpp  test_log.cpp  test_ofstream.cpp  test_progress_bar.cpp  test_promise_collectives.cpp  test_reduce_prefix.cpp  test_shared_global_ptr.cpp  test_split_rank.cpp  test_thread_pool.cpp  test_three_tier_aggr_store.cpp  test_timers.cpp  test_upcxx_utils.cpp  test_version.cpp
micro/dht/: dmap-test.cpp  dmap.hpp
