cmake_minimum_required(VERSION 3.16 FATAL_ERROR)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
set(CMAKE_DISABLE_SOURCE_CHANGES ON)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

project(mhm_bench LANGUAGES CXX)

include(GNUInstallDirs)

find_package(UPCXX-UTILS REQUIRED)
find_package(Kokkos REQUIRED)
find_package(UPCXX REQUIRED)
find_package(MPI REQUIRED)

add_subdirectory(kernels)
